// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Explorer > renders DataView in grid layout mode 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="blong-explorer-toolbar border-none p-2 flex-nowrap p-toolbar p-component"
      data-pc-name="toolbar"
      data-pc-section="root"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-start p-toolbar-group-left"
        data-pc-section="start"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-center"
        data-pc-section="center"
      />
      <div
        class="p-toolbar-group-end p-toolbar-group-right"
        data-pc-section="end"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
          >
            <span
              class="p-button-icon p-c pi pi-search"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="blong-explorer-search p-inputtext p-component"
              data-pc-name="inputtext"
              data-pc-section="root"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="blong-explorer-dv p-dataview p-component p-dataview-grid p-dataview-loading"
          data-pc-name="dataview"
          data-pc-section="root"
          style="flex: 1 1 0%; overflow: auto;"
        >
          <div
            class="p-dataview-loading-overlay p-component-overlay"
            data-pc-section="loadingoverlay"
          >
            <span
              class="p-dataview-loading-icon pi pi-spinner"
              data-pc-section="loadingicon"
            />
          </div>
          <div
            class="p-dataview-content"
            data-pc-section="content"
          >
            <div
              class="p-grid grid p-nogutter grid-nogutter"
              data-pc-section="grid"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders empty state with no listAction 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="blong-explorer-toolbar border-none p-2 flex-nowrap p-toolbar p-component"
      data-pc-name="toolbar"
      data-pc-section="root"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-start p-toolbar-group-left"
        data-pc-section="start"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-center"
        data-pc-section="center"
      />
      <div
        class="p-toolbar-group-end p-toolbar-group-right"
        data-pc-section="end"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button-text mr-2 ml-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
          >
            <span
              class="p-button-icon p-c pi pi-search"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="blong-explorer-search p-inputtext p-component"
              data-pc-name="inputtext"
              data-pc-section="root"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="blong-explorer-dt p-datatable p-component p-datatable-selectable p-datatable-responsive-scroll p-datatable-sm"
          data-pc-name="datatable"
          data-pc-section="root"
          data-scrollselectors=".p-datatable-wrapper"
          data-showgridlines="false"
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
            data-pc-section="wrapper"
            style="overflow: auto;"
          >
            <table
              class="p-datatable-table"
              data-pc-section="table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
                data-pc-name="datatable"
                data-pc-section="thead"
                role="rowgroup"
              >
                <tr
                  data-pc-section="headerrow"
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="false"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Name
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Size
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
                data-pc-section="tbody"
                role=" rowgroup"
              >
                <tr
                  class="p-datatable-emptymessage"
                  data-pc-section="emptymessage"
                  role="row"
                >
                  <td
                    colspan="3"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                  >
                    No records found.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders toolbar 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="blong-explorer-toolbar border-none p-2 flex-nowrap p-toolbar p-component"
      data-pc-name="toolbar"
      data-pc-section="root"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-start p-toolbar-group-left"
        data-pc-section="start"
      >
        <div
          class="blong-toolbar-left"
        >
          <span
            style="display: inline-block;"
          >
            <button
              aria-label="Add"
              class="blong-action-btn mr-2 p-button p-component"
              data-pc-name="button"
              data-pc-section="root"
            >
              <span
                class="p-button-icon p-c p-button-icon-left pi-plus"
                data-pc-section="icon"
              />
              <span
                class="p-button-label p-c"
                data-pc-section="label"
              >
                <span>
                  Add
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="p-toolbar-group-center"
        data-pc-section="center"
      />
      <div
        class="p-toolbar-group-end p-toolbar-group-right"
        data-pc-section="end"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button-text mr-2 ml-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
          >
            <span
              class="p-button-icon p-c pi pi-search"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="blong-explorer-search p-inputtext p-component"
              data-pc-name="inputtext"
              data-pc-section="root"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="blong-explorer-dt p-datatable p-component p-datatable-selectable p-datatable-responsive-scroll p-datatable-sm"
          data-pc-name="datatable"
          data-pc-section="root"
          data-scrollselectors=".p-datatable-wrapper"
          data-showgridlines="false"
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
            data-pc-section="wrapper"
            style="overflow: auto;"
          >
            <table
              class="p-datatable-table"
              data-pc-section="table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
                data-pc-name="datatable"
                data-pc-section="thead"
                role="rowgroup"
              >
                <tr
                  data-pc-section="headerrow"
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="false"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Name
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
                data-pc-section="tbody"
                role=" rowgroup"
              >
                <tr
                  class="p-datatable-emptymessage"
                  data-pc-section="emptymessage"
                  role="row"
                >
                  <td
                    colspan="2"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                  >
                    No records found.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders with data rows after dispatch resolves 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="blong-explorer-toolbar border-none p-2 flex-nowrap p-toolbar p-component"
      data-pc-name="toolbar"
      data-pc-section="root"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-start p-toolbar-group-left"
        data-pc-section="start"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-center"
        data-pc-section="center"
      />
      <div
        class="p-toolbar-group-end p-toolbar-group-right"
        data-pc-section="end"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button-text mr-2 ml-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
          >
            <span
              class="p-button-icon p-c pi pi-search"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="blong-explorer-search p-inputtext p-component"
              data-pc-name="inputtext"
              data-pc-section="root"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button-text mr-2 p-button p-component p-button-icon-only"
            data-pc-name="button"
            data-pc-section="root"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="blong-explorer-dt p-datatable p-component p-datatable-selectable p-datatable-responsive-scroll p-datatable-sm"
          data-pc-name="datatable"
          data-pc-section="root"
          data-scrollselectors=".p-datatable-wrapper"
          data-showgridlines="false"
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
            data-pc-section="wrapper"
            style="overflow: auto;"
          >
            <table
              class="p-datatable-table"
              data-pc-section="table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
                data-pc-name="datatable"
                data-pc-section="thead"
                role="rowgroup"
              >
                <tr
                  data-pc-section="headerrow"
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="false"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Name
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    data-p-filter-column="false"
                    data-p-frozen-column="false"
                    data-p-reorderable-column="false"
                    data-p-resizable-column="false"
                    data-p-sortable-column="true"
                    data-pc-name="datatable"
                    data-pc-section="headercell"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                      data-pc-section="headercontent"
                    >
                      <span
                        class="p-column-title"
                        data-pc-section="headertitle"
                      >
                        Size
                      </span>
                      <span
                        data-pc-section="sort"
                      >
                        <svg
                          class="p-icon p-sortable-column-icon"
                          data-pc-section="sorticon"
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.64515 3.61291C5.47353 3.61291 5.30192 3.54968 5.16644 3.4142L3.38708 1.63484L1.60773 3.4142C1.34579 3.67613 0.912244 3.67613 0.650309 3.4142C0.388374 3.15226 0.388374 2.71871 0.650309 2.45678L2.90837 0.198712C3.17031 -0.0632236 3.60386 -0.0632236 3.86579 0.198712L6.12386 2.45678C6.38579 2.71871 6.38579 3.15226 6.12386 3.4142C5.98837 3.54968 5.81676 3.61291 5.64515 3.61291Z"
                            fill="currentColor"
                          />
                          <path
                            d="M3.38714 14C3.01681 14 2.70972 13.6929 2.70972 13.3226V0.677419C2.70972 0.307097 3.01681 0 3.38714 0C3.75746 0 4.06456 0.307097 4.06456 0.677419V13.3226C4.06456 13.6929 3.75746 14 3.38714 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.4413 14 10.2697 13.9368 10.1342 13.8013L7.87611 11.5432C7.61418 11.2813 7.61418 10.8477 7.87611 10.5858C8.13805 10.3239 8.5716 10.3239 8.83353 10.5858L10.6129 12.3652L12.3922 10.5858C12.6542 10.3239 13.0877 10.3239 13.3497 10.5858C13.6116 10.8477 13.6116 11.2813 13.3497 11.5432L11.0916 13.8013C10.9561 13.9368 10.7845 14 10.6129 14Z"
                            fill="currentColor"
                          />
                          <path
                            d="M10.6129 14C10.2426 14 9.93552 13.6929 9.93552 13.3226V0.677419C9.93552 0.307097 10.2426 0 10.6129 0C10.9833 0 11.2904 0.307097 11.2904 0.677419V13.3226C11.2904 13.6929 10.9832 14 10.6129 14Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
                data-pc-section="tbody"
                role=" rowgroup"
              >
                <tr
                  aria-selected="false"
                  class="p-selectable-row"
                  data-p-highlight="false"
                  data-p-highlight-contextmenu="false"
                  data-p-selectable-row="true"
                  data-pc-section="bodyrow"
                  role="row"
                >
                  <td
                    class="p-selection-column"
                    data-p-cell-editing="false"
                    data-p-editable-column="false"
                    data-p-frozen-column="false"
                    data-p-selectable-cell="false"
                    data-p-selection-column="true"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                    style="width: 40px;"
                  >
                    <div
                      aria-checked="false"
                      class="p-radiobutton p-component"
                      data-p-checked="false"
                      data-pc-name="radiobutton"
                      data-pc-section="root"
                      role="radio"
                    >
                      <input
                        aria-checked="false"
                        class="p-radiobutton-input"
                        data-pc-section="input"
                        name="pr_id_0_dt_radio"
                        type="radio"
                      />
                      <div
                        class="p-radiobutton-box"
                        data-pc-section="box"
                      >
                        <div
                          class="p-radiobutton-icon"
                          data-pc-section="icon"
                        />
                      </div>
                    </div>
                  </td>
                  <td
                    data-p-cell-editing="false"
                    data-p-editable-column="false"
                    data-p-frozen-column="false"
                    data-p-selectable-cell="false"
                    data-p-selection-column="false"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                  >
                    file.txt
                  </td>
                  <td
                    data-p-cell-editing="false"
                    data-p-editable-column="false"
                    data-p-frozen-column="false"
                    data-p-selectable-cell="false"
                    data-p-selection-column="false"
                    data-pc-name="datatable"
                    data-pc-section="bodycell"
                    role="cell"
                  >
                    100
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="blong-explorer-paginator"
          style="display: flex; align-items: center; gap: 0.25rem; padding: 0.5rem; justify-content: center; user-select: none;"
        >
          <button
            class="p-button-text p-button-sm p-button p-component p-button-icon-only p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
          >
            <span
              class="p-button-icon p-c pi pi-angle-double-left"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <button
            class="p-button-text p-button-sm p-button p-component p-button-icon-only p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
          >
            <span
              class="p-button-icon p-c pi pi-angle-left"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <span
            style="padding: 0px 0.5rem; font-size: 0.875rem;"
          >
            1
             / 
            1
          </span>
          <button
            class="p-button-text p-button-sm p-button p-component p-button-icon-only p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
          >
            <span
              class="p-button-icon p-c pi pi-angle-right"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <button
            class="p-button-text p-button-sm p-button p-component p-button-icon-only p-disabled"
            data-pc-name="button"
            data-pc-section="root"
            disabled=""
          >
            <span
              class="p-button-icon p-c pi pi-angle-double-right"
              data-pc-section="icon"
            />
            <span
              class="p-button-label p-c"
              data-pc-section="label"
            >
               
            </span>
          </button>
          <select
            style="margin-left: 0.5rem; background: var(--surface-overlay); color: var(--text-color); border: 1px solid var(--surface-border); border-radius: var(--border-radius); padding: 0.2rem;"
          >
            <option
              value="10"
            >
              10
            </option>
            <option
              value="25"
            >
              25
            </option>
            <option
              value="50"
            >
              50
            </option>
            <option
              value="100"
            >
              100
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;
